--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
           <img class="icon" src="assets/frog-icon.gif">
           <img class="icon" src="assets/frog-icon.gif">
           <img class="icon" src="assets/frog-icon.gif">
-          <p class="time">Best time: 0:00</p>
+          <p class="time">Best time 0:00</p>
         </div>
         <div class="player">
           <p>Player 2</p>
           <img class="icon" src="assets/frog-icon.gif">
           <img class="icon" src="assets/frog-icon.gif">
           <img class="icon" src="assets/frog-icon.gif">
-          <p class="time">Best time: 0:00</p>
+          <p class="time">Best time 0:00</p>
       </div>
       <div class="start-game">
-        <div class="counter"><p>Counter 0:00</p></div>
+        <div class="counter"><p>Time 0:00</p></div>
         <button type="button" class="start-button">start</button>
       </div>
     </section>
