--- a/index.html
+++ b/index.html
@@ -20,37 +20,40 @@
       <img src="assets/logo.jpg">
       <img class="pepe-the-frog" src="assets/pepe-the-frog.gif">
     </header>
-    <!-- direction for instructions -->
-    <div class="instructions">
-      <p>Hold 'command' for instructions</p>
-    </div>
+
+    <div class="game-section">
+      <!-- direction for instructions -->
+      <div class="instructions">
+        <p>Hold 'command' for instructions</p>
+      </div>
     <!-- game board -->
-    <section class="game">
-      <div class="finish"></div>
-      <div class="start"></div>
-    </section>
-    <!-- game info -->
-    <section class="game-info">
-      <div class="player-info">
-        <div class="player">
-          <p>Player 1</p>
-          <img class="icon" src="assets/frog-icon.gif">
-          <img class="icon" src="assets/frog-icon.gif">
-          <img class="icon" src="assets/frog-icon.gif">
-          <p class="time">Best time 0:00</p>
+      <section class="game">
+        <div class="finish"></div>
+        <div class="start"></div>
+      </section>
+      <!-- game info -->
+      <section class="game-info">
+        <div class="player-info">
+          <div class="player">
+            <p>Player 1</p>
+            <img class="icon" src="assets/frog-icon.gif">
+            <img class="icon" src="assets/frog-icon.gif">
+            <img class="icon" src="assets/frog-icon.gif">
+            <p class="time">Best time 0:00</p>
+          </div>
+          <div class="player">
+            <p>Player 2</p>
+            <img class="icon" src="assets/frog-icon.gif">
+            <img class="icon" src="assets/frog-icon.gif">
+            <img class="icon" src="assets/frog-icon.gif">
+            <p class="time">Best time 0:00</p>
         </div>
-        <div class="player">
-          <p>Player 2</p>
-          <img class="icon" src="assets/frog-icon.gif">
-          <img class="icon" src="assets/frog-icon.gif">
-          <img class="icon" src="assets/frog-icon.gif">
-          <p class="time">Best time 0:00</p>
-      </div>
-      <div class="start-game">
-        <div class="counter"><p>Time 0:00</p></div>
-        <button type="button" class="start-button">start</button>
-      </div>
-    </section>
+        <div class="start-game">
+          <div class="counter"><p>Time 0:00</p></div>
+          <button type="button" class="start-button">start</button>
+        </div>
+      </section>
+    </div>
 
     <footer><p><strong>Made for WDI HK | 2016</strong></p></footer>
   </body>
