added frogger sprite

--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
     <!-- game board -->
       <section class="game">
         <div class="finish"></div>
-        <div class="start"></div>
+        <div class="start">
+          <img class="frogger" src="assets/frogger-sprite.png">
+        </div>
       </section>
       <!-- game info -->
       <section class="game-info">
