set key events to move frogger - frogger moves once per key

--- a/index.html
+++ b/index.html
@@ -26,12 +26,11 @@
       <div class="instructions">
         <p>Hold 'command' for instructions</p>
       </div>
-    <!-- game board -->
+      <!-- game board -->
       <section class="game">
         <div class="finish"></div>
-        <div class="start">
-          <img class="frogger" src="assets/frogger-sprite.png">
-        </div>
+        <div class="start"></div>
+        <img class="frogger" src="assets/frogger-sprite.png">
       </section>
       <!-- game info -->
       <section class="game-info">
