collision logic written, not functioning

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
         <div class="finish"></div>
         <div class="start"></div>
         <img class="frogger" src="assets/frogger-sprite.png">
+        <img class="truck" src="assets/truck.png">
       </section>
       <!-- game info -->
       <section class="game-info">
