collision functioning, needs to be more precise

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div class="game-section">
       <!-- direction for instructions -->
       <div class="instructions">
-        <p>Hold 'command' for instructions</p>
+        <p>Use arrow keys to hop Frogger</p>
       </div>
       <!-- game board -->
       <section class="game">
