first moving vehicle replicated

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         <div class="start"></div>
         <img class="frogger" src="assets/frogger-sprite.png">
         <img class="truck" src="assets/truck.png">
+        <img class="truck-2" src="assets/truck-2.png">
       </section>
       <!-- game info -->
       <section class="game-info">
