first moving vehicle animation loops

--- a/index.html
+++ b/index.html
@@ -28,11 +28,14 @@
       </div>
       <!-- game board -->
       <section class="game">
+        <!-- start and finish lines -->
         <div class="finish"></div>
         <div class="start"></div>
+        <!-- frogger + vehicles -->
         <img class="frogger" src="assets/frogger-sprite.png">
         <img class="truck" src="assets/truck.png">
-        <img class="truck-2" src="assets/truck-2.png">
+        <img class="truck-2" src="assets/truck.png">
+        <img class="truck-3" src="assets/truck.png">
       </section>
       <!-- game info -->
       <section class="game-info">
