--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
         <img class="truck" src="assets/truck.png">
         <img class="truck-2" src="assets/truck.png">
         <img class="truck-3" src="assets/truck.png">
+        <img class="truck-4" src="assets/truck.png">
+        <img class="truck-5" src="assets/truck.png">
+        <img class="truck-6" src="assets/truck.png">
       </section>
       <!-- game info -->
       <section class="game-info">
