collision clears animation queue, but completes current animation

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="finish"></div>
         <div class="start"></div>
         <!-- frogger + vehicles -->
-        <img class="frogger" src="assets/frogger-sprite.png">
+        <div class="frogger"></div>
         <img class="truck" src="assets/truck.png">
         <img class="truck-2" src="assets/truck.png">
         <img class="truck-3" src="assets/truck.png">
