--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
         <div class="start"></div>
         <!-- frogger + vehicles -->
         <div class="frogger"></div>
-        <img class="truck" src="assets/truck.png">
-        <img class="truck-2" src="assets/truck.png">
-        <img class="truck-3" src="assets/truck.png">
-        <img class="truck-4" src="assets/truck.png">
-        <img class="truck-5" src="assets/truck.png">
-        <img class="truck-6" src="assets/truck.png">
+        <img class="vehicle truck" src="assets/truck.png">
+        <img class="vehicle truck-2" src="assets/truck.png">
+        <img class="vehicle truck-3" src="assets/truck.png">
+        <img class="vehicle truck-4" src="assets/truck.png">
+        <img class="vehicle truck-5" src="assets/truck.png">
+        <img class="vehicle truck-6" src="assets/truck.png">
       </section>
       <!-- game info -->
       <section class="game-info">
