logic set for scoring

--- a/index.html
+++ b/index.html
@@ -45,17 +45,28 @@
         <div class="player-info">
           <div class="player">
             <p>Player 1</p>
-            <img class="icon" src="assets/frog-icon.gif">
-            <img class="icon" src="assets/frog-icon.gif">
-            <img class="icon" src="assets/frog-icon.gif">
-            <p class="best-time">Best time 0:00</p>
+            <div class="player-lives">
+              <img class="icon" src="assets/frog-icon.gif">
+              <img class="icon" src="assets/frog-icon.gif">
+              <img class="icon" src="assets/frog-icon.gif">
+            </div>
+            <div class="score">
+              <p>Best time </p>
+              <p class="player-time">0:00</p>
+            </div>
           </div>
           <div class="player">
             <p>Player 2</p>
-            <img class="icon" src="assets/frog-icon.gif">
-            <img class="icon" src="assets/frog-icon.gif">
-            <img class="icon" src="assets/frog-icon.gif">
-            <p class="best-time">Best time 0:00</p>
+            <div class="player-lives">
+              <img class="icon" src="assets/frog-icon.gif">
+              <img class="icon" src="assets/frog-icon.gif">
+              <img class="icon" src="assets/frog-icon.gif">
+            </div>
+            <div class="score">
+              <p>Best time </p>
+              <p class="player-time">0:00</p>
+            </div>
+          </div>
         </div>
         <div class="start-game">
           <div class="counter">
