frogger hops in right direction

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div class="finish"></div>
         <div class="start"></div>
         <!-- frogger + vehicles -->
-        <div class="frogger"></div>
+        <div class="frogger frogger-up"></div>
         <img class="vehicle truck" src="assets/truck.png">
         <img class="vehicle truck-2" src="assets/truck.png">
         <img class="vehicle truck-3" src="assets/truck.png">
