added styling, hop and squash sounds

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   <body>
     <header>
-      <img src="assets/logo.jpg">
+      <img src="assets/frogger-logo.png">
       <img class="pepe-the-frog" src="assets/pepe-the-frog.gif">
     </header>
 
@@ -79,6 +79,10 @@
     </div>
 
     <footer><p><strong>Made for WDI HK | 2016</strong></p></footer>
+
+    <audio src="assets/frogger-hop.wav" class="hop">
+    <audio src="assets/frogger-squash.wav" class="squash">
+
   </body>
 
 </html>
