--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="js/application.js"></script>
 
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+
     <link href="css/stylesheet.css" rel="stylesheet">
   </head>
 
@@ -39,6 +43,7 @@
         <img class="vehicle truck-4" src="assets/truck.png">
         <img class="vehicle truck-5" src="assets/truck.png">
         <img class="vehicle truck-6" src="assets/truck.png">
+        <img class="vehicle car" src="assets/car.png">
       </section>
       <!-- game info -->
       <section class="game-info">
@@ -51,7 +56,7 @@
               <img class="icon" src="assets/frog-icon.gif">
             </div>
             <div class="score">
-              <p>Best time </p>
+              <p>Best time: </p>
               <p class="player-time">00</p>
             </div>
           </div>
@@ -63,7 +68,7 @@
               <img class="icon" src="assets/frog-icon.gif">
             </div>
             <div class="score">
-              <p>Best time </p>
+              <p>Best time: </p>
               <p class="player-time">00</p>
             </div>
           </div>
