--- a/index.html
+++ b/index.html
@@ -49,28 +49,12 @@
       <section class="game-info">
         <div class="player-info">
           <div class="player">
-            <p>Player 1</p>
-            <div class="player-lives">
-              <img class="icon" src="assets/frog-icon.gif">
-              <img class="icon" src="assets/frog-icon.gif">
-              <img class="icon" src="assets/frog-icon.gif">
-            </div>
-            <div class="score">
-              <p>Best time: </p>
-              <p class="player-time">00</p>
-            </div>
+            <p>Player 1 | Best time </p>
+            <p class="player-time">00</p>
           </div>
           <div class="player">
-            <p>Player 2</p>
-            <div class="player-lives">
-              <img class="icon" src="assets/frog-icon.gif">
-              <img class="icon" src="assets/frog-icon.gif">
-              <img class="icon" src="assets/frog-icon.gif">
-            </div>
-            <div class="score">
-              <p>Best time: </p>
-              <p class="player-time">00</p>
-            </div>
+            <p>Player 2 | Best time </p>
+            <p class="player-time">00</p>
           </div>
         </div>
         <div class="start-game">
