refactored vehicle generation + overall code

--- a/index.html
+++ b/index.html
@@ -27,18 +27,10 @@
 
     <div class="game-section">
       <!-- modals for win/lose + to reset game -->
-      <div id="win-modal" class="modal">
-        <div id="win-content" class="modal-content">
-          <span class="close">x</span>
-          <p>Frogger is safe!</p>
+      <div class="modal">
+        <div class="modal-content">
         </div>
-      </div>
-
-      <div id="lose-modal" class="modal">
-        <div id="lose-content" class="modal-content">
-          <span class="close">x</span>
-          <p>Frogger is dead!</p>
-        </div>
+        <button class="reset">Play Again</button>
       </div>
 
       <!-- direction for instructions -->
@@ -52,12 +44,12 @@
         <div class="start"></div>
         <!-- frogger + vehicles -->
         <div class="frogger frogger-up"></div>
-        <img class="vehicle truck" src="assets/truck.png">
+<!--         <img class="vehicle truck" src="assets/truck.png">
         <img class="vehicle truck-2" src="assets/truck.png">
         <img class="vehicle truck-3" src="assets/truck.png">
         <img class="vehicle truck-4" src="assets/truck.png">
         <img class="vehicle truck-5" src="assets/truck.png">
-        <img class="vehicle truck-6" src="assets/truck.png">
+        <img class="vehicle truck-6" src="assets/truck.png"> -->
         <img class="vehicle car" src="assets/car.png">
       </section>
       <!-- game info -->
