--- a/index.html
+++ b/index.html
@@ -42,15 +42,8 @@
         <!-- start and finish lines -->
         <div class="finish"></div>
         <div class="start"></div>
-        <!-- frogger + vehicles -->
+        <!-- frogger -->
         <div class="frogger frogger-up"></div>
-<!--         <img class="vehicle truck" src="assets/truck.png">
-        <img class="vehicle truck-2" src="assets/truck.png">
-        <img class="vehicle truck-3" src="assets/truck.png">
-        <img class="vehicle truck-4" src="assets/truck.png">
-        <img class="vehicle truck-5" src="assets/truck.png">
-        <img class="vehicle truck-6" src="assets/truck.png"> -->
-        <img class="vehicle car" src="assets/car.png">
       </section>
       <!-- game info -->
       <section class="game-info">
