--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
       <!-- game info -->
       <section class="game-info">
         <div class="player-info">
-          <div class="player">
+          <div class="player-one">
             <p>Player 1 | Best time </p>
-            <p class="player-time">00</p>
+            <p class="player-one-time">00</p>
           </div>
-          <div class="player">
+          <div class="player-two">
             <p>Player 2 | Best time </p>
-            <p class="player-time">00</p>
+            <p class="player-two-time">00</p>
           </div>
         </div>
         <div class="start-game">
